--- a/TextChatComponetSample/Framework/TextChatComponentDivTableViewCell.xib
+++ b/TextChatComponetSample/Framework/TextChatComponentDivTableViewCell.xib
@@ -11,9 +11,9 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4mF-av-bRY" id="9xj-Ij-A8T">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <color key="backgroundColor" red="0.56399729497842221" green="0.64313725489999995" blue="0.25231239928579374" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
             <point key="canvasLocation" x="324" y="199"/>
         </tableViewCell>
