--- a/iOS-text-chat/TextChatComponetSample/Framework/TextChatComponent.xib
+++ b/iOS-text-chat/TextChatComponetSample/Framework/TextChatComponent.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IMComponent">
@@ -57,7 +56,7 @@
                         <action selector="onSendButton:" destination="-1" eventType="touchUpInside" id="Hno-I2-VW8"/>
                     </connections>
                 </button>
-                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX6-Zz-0cb" userLabel="Message Banner">
+                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX6-Zz-0cb" userLabel="Message Banner">
                     <rect key="frame" x="0.0" y="525" width="600" height="29"/>
                     <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
@@ -69,7 +68,7 @@
                         <action selector="onNewMessageButton:" destination="-1" eventType="touchUpInside" id="Ax1-B7-d7Q"/>
                     </connections>
                 </button>
-                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sda-ij-nTc" userLabel="Error Message">
+                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sda-ij-nTc" userLabel="Error Message">
                     <rect key="frame" x="0.0" y="44" width="600" height="29"/>
                     <color key="backgroundColor" red="0.9882352941176471" green="0.98431372549019602" blue="0.71764705882352942" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
@@ -81,65 +80,81 @@
                         <action selector="onSendButton:" destination="-1" eventType="touchUpInside" id="Wnw-Cc-HhN"/>
                     </connections>
                 </button>
-                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZDc-px-bQF">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d14-QU-ZHB">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                    <color key="barTintColor" red="0.33725490200000002" green="0.61176470589999998" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <textAttributes key="titleTextAttributes">
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </textAttributes>
-                    <items>
-                        <navigationItem title="Esteban, Bill" id="K5U-gV-ghG">
-                            <rightBarButtonItems>
-                                <barButtonItem tag="2" image="close x white.png" id="0li-cP-dDd" userLabel="close">
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <connections>
-                                        <action selector="closeButton:" destination="iN0-l3-epB" id="0D4-fF-jvy"/>
-                                    </connections>
-                                </barButtonItem>
-                                <barButtonItem tag="1" image="minimize.png" id="ePd-L1-9TQ" userLabel="minimize">
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <connections>
-                                        <action selector="minimizeView:" destination="iN0-l3-epB" id="sV5-yh-sJR"/>
-                                    </connections>
-                                </barButtonItem>
-                            </rightBarButtonItems>
-                        </navigationItem>
-                    </items>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="Qd8-CT-wTD"/>
-                    </connections>
-                </navigationBar>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OFm-Hr-FhA" userLabel="closeButton">
+                            <rect key="frame" x="571" y="11" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="IO1-n2-KtN"/>
+                                <constraint firstAttribute="height" constant="20" id="PLq-Ol-4iY"/>
+                            </constraints>
+                            <state key="normal" image="close x white.png"/>
+                            <connections>
+                                <action selector="closeButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="arQ-2O-yqV"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Esteban, Bill" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rt0-vx-EzT" userLabel="topNavBarTitle">
+                            <rect key="frame" x="254" y="11" width="92" height="21"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0Y-DI-2dJ" userLabel="toggleButton">
+                            <rect key="frame" x="530" y="11" width="20" height="19"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="19" id="qMK-vA-ni2"/>
+                                <constraint firstAttribute="width" constant="20" id="vhY-4W-c95"/>
+                            </constraints>
+                            <state key="normal" image="minimize.png"/>
+                            <connections>
+                                <action selector="minimizeView:" destination="iN0-l3-epB" eventType="touchUpInside" id="QD7-Px-dWj"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.33725490200000002" green="0.61176470589999998" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="OFm-Hr-FhA" secondAttribute="trailing" constant="9" id="1ww-TH-E74"/>
+                        <constraint firstItem="rt0-vx-EzT" firstAttribute="top" secondItem="d14-QU-ZHB" secondAttribute="top" constant="11" id="ER3-G5-Dnf"/>
+                        <constraint firstItem="rt0-vx-EzT" firstAttribute="centerX" secondItem="d14-QU-ZHB" secondAttribute="centerX" id="HpO-mn-4JC"/>
+                        <constraint firstItem="o0Y-DI-2dJ" firstAttribute="top" secondItem="d14-QU-ZHB" secondAttribute="top" constant="11" id="Jco-pL-2YX"/>
+                        <constraint firstAttribute="trailing" secondItem="o0Y-DI-2dJ" secondAttribute="trailing" constant="50" id="bKW-GP-qME"/>
+                        <constraint firstAttribute="height" constant="44" id="cBr-U5-5FX"/>
+                        <constraint firstItem="rt0-vx-EzT" firstAttribute="centerY" secondItem="d14-QU-ZHB" secondAttribute="centerY" id="fjN-1v-RJh"/>
+                        <constraint firstItem="OFm-Hr-FhA" firstAttribute="top" secondItem="d14-QU-ZHB" secondAttribute="top" constant="11" id="q9M-6m-RiF"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.078431372549019607" green="0.20784313725490197" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="oX6-Zz-0cb" firstAttribute="trailing" secondItem="vkl-Dd-Rd9" secondAttribute="trailing" id="3hX-oT-hdy"/>
-                <constraint firstItem="sda-ij-nTc" firstAttribute="leading" secondItem="ZDc-px-bQF" secondAttribute="leading" id="6Pt-3d-pRO"/>
-                <constraint firstItem="ZDc-px-bQF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="7CX-LC-K9I"/>
-                <constraint firstItem="ZDc-px-bQF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9d2-ox-lcH"/>
-                <constraint firstItem="sda-ij-nTc" firstAttribute="trailing" secondItem="ZDc-px-bQF" secondAttribute="trailing" id="Alf-6Q-63l"/>
                 <constraint firstItem="lMY-oW-XdU" firstAttribute="top" secondItem="vkl-Dd-Rd9" secondAttribute="bottom" constant="8" id="BkV-qN-iCy"/>
                 <constraint firstItem="lMY-oW-XdU" firstAttribute="top" secondItem="oX6-Zz-0cb" secondAttribute="bottom" constant="8" symbolic="YES" id="HJ8-8f-W6x"/>
+                <constraint firstItem="d14-QU-ZHB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="OM4-VM-pjh"/>
+                <constraint firstAttribute="trailing" secondItem="d14-QU-ZHB" secondAttribute="trailing" id="Rer-WY-0qQ"/>
+                <constraint firstItem="d14-QU-ZHB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="UbX-Z7-23Y"/>
                 <constraint firstItem="sda-ij-nTc" firstAttribute="top" secondItem="vkl-Dd-Rd9" secondAttribute="top" id="Wu8-Nl-fRu"/>
-                <constraint firstAttribute="trailing" secondItem="ZDc-px-bQF" secondAttribute="trailing" id="coS-PN-Mxh"/>
+                <constraint firstItem="sda-ij-nTc" firstAttribute="top" secondItem="d14-QU-ZHB" secondAttribute="bottom" id="YMs-8M-WH7"/>
                 <constraint firstAttribute="trailing" secondItem="vkl-Dd-Rd9" secondAttribute="trailing" id="gFQ-YQ-QDC"/>
+                <constraint firstItem="d14-QU-ZHB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gQc-xl-Wiw"/>
                 <constraint firstAttribute="bottom" secondItem="lMY-oW-XdU" secondAttribute="bottom" constant="8" id="jJe-IQ-E8D"/>
                 <constraint firstItem="vkl-Dd-Rd9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jTI-Gj-iLA"/>
                 <constraint firstItem="lMY-oW-XdU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="lqy-aB-Icf"/>
                 <constraint firstItem="oX6-Zz-0cb" firstAttribute="leading" secondItem="sda-ij-nTc" secondAttribute="leading" id="slz-er-hgj"/>
                 <constraint firstAttribute="trailing" secondItem="lMY-oW-XdU" secondAttribute="trailing" constant="8" id="tOD-jr-4JM"/>
-                <constraint firstItem="vkl-Dd-Rd9" firstAttribute="top" secondItem="ZDc-px-bQF" secondAttribute="bottom" id="yX8-2f-Bj7"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="closeButton" destination="0li-cP-dDd" id="Eaj-qh-NKB"/>
+                <outlet property="closeButton" destination="OFm-Hr-FhA" id="OlS-LN-eY9"/>
                 <outlet property="countLabel" destination="fN9-Sh-1Cb" id="yoc-si-ktb"/>
                 <outlet property="errorMessage" destination="sda-ij-nTc" id="2P3-R6-HnH"/>
                 <outlet property="messageBanner" destination="oX6-Zz-0cb" id="skQ-HJ-G1S"/>
-                <outlet property="minimizeView" destination="ePd-L1-9TQ" id="dC8-RQ-7O7"/>
+                <outlet property="minimizeView" destination="o0Y-DI-2dJ" id="FOc-fI-pwW"/>
                 <outlet property="tableView" destination="vkl-Dd-Rd9" id="4V5-1Y-hag"/>
                 <outlet property="textField" destination="lMY-oW-XdU" id="hvS-7D-6bc"/>
-                <outlet property="topNavBar" destination="ZDc-px-bQF" id="RvE-LV-LSm"/>
+                <outlet property="topNavBar" destination="d14-QU-ZHB" id="5zP-1B-AA7"/>
+                <outlet property="topNavBarTitle" destination="rt0-vx-EzT" id="sCc-u6-Mse"/>
             </connections>
             <point key="canvasLocation" x="370" y="346"/>
         </view>
