--- a/iOS-text-chat/TextChatComponetSample/Framework/TextChatComponentRecvTableViewCell.xib
+++ b/iOS-text-chat/TextChatComponetSample/Framework/TextChatComponentRecvTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="366" height="148.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbu-Kn-Zb6" userLabel="Message">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbu-Kn-Zb6" userLabel="Message">
                         <rect key="frame" x="73" y="30" width="286" height="109"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -27,7 +27,7 @@
                         <rect key="frame" x="8" y="52" width="50" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="B" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vB3-Fj-Kin" userLabel="userFirstLetterLabel">
-                                <rect key="frame" x="10" y="10" width="30" height="36"/>
+                                <rect key="frame" x="10" y="10" width="30" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -35,16 +35,16 @@
                         </subviews>
                         <color key="backgroundColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill, 10:00PM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtI-Gu-ipU" userLabel="UserTime">
-                        <rect key="frame" x="280" y="8" width="77.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="13"/>
-                        <color key="textColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WT6-Jr-DsS" userLabel="cornetUpleft">
                         <rect key="frame" x="46" y="30" width="30" height="29"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bill, 10:00PM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtI-Gu-ipU" userLabel="UserTime">
+                        <rect key="frame" x="73" y="8" width="285" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="13"/>
+                        <color key="textColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="WT6-Jr-DsS" firstAttribute="top" secondItem="9d6-74-pns" secondAttribute="topMargin" constant="22" id="6o5-Vp-EJe"/>
@@ -53,7 +53,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="hbu-Kn-Zb6" secondAttribute="trailing" constant="-1" id="JJG-Nv-t6A"/>
                     <constraint firstAttribute="topMargin" secondItem="wtI-Gu-ipU" secondAttribute="top" id="X5g-NM-Z54"/>
                     <constraint firstItem="hbu-Kn-Zb6" firstAttribute="top" secondItem="9d6-74-pns" secondAttribute="topMargin" constant="22" id="eRi-Qs-N6R"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="hbu-Kn-Zb6" secondAttribute="bottom" constant="-0.5" id="eZF-1Q-GPk"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="hbu-Kn-Zb6" secondAttribute="bottom" constant="1.5" id="eZF-1Q-GPk"/>
                     <constraint firstAttribute="trailingMargin" secondItem="wtI-Gu-ipU" secondAttribute="trailing" id="kaW-6x-8Fr"/>
                     <constraint firstItem="hbu-Kn-Zb6" firstAttribute="top" secondItem="wtI-Gu-ipU" secondAttribute="bottom" constant="1" id="lm9-mH-8h0"/>
                     <constraint firstItem="hbu-Kn-Zb6" firstAttribute="leading" secondItem="9d6-74-pns" secondAttribute="leadingMargin" constant="65" id="rMo-yi-xeD"/>
