--- a/android-text-chat/text-chat-component/src/main/res/layout/received_row.xml
+++ b/android-text-chat/text-chat-component/src/main/res/layout/received_row.xml
@@ -3,46 +3,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/msg_info"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="22.5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="sans-serif"
-        android:paddingBottom="3dp"
-        android:singleLine="true"
-        android:textColor="@color/info_text"
-        android:textSize="@dimen/info_text" />
+        android:layout_toRightOf="@+id/initial"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/msg_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/msg_info"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="22.5dp"
-        android:background="@drawable/gray_bubble"
-        android:fontFamily="sans-serif"
-        android:paddingBottom="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp"
-        android:singleLine="false"
-        android:textAlignment="center"
-        android:textColor="@color/primary_text"
-        android:textSize="@dimen/text_size" />
+        <TextView
+            android:id="@+id/msg_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:fontFamily="sans-serif"
+            android:paddingBottom="3dp"
+            android:paddingRight="2dp"
+            android:singleLine="true"
+            android:textColor="@color/info_text"
+            android:textSize="@dimen/info_text"
+            android:layout_gravity="right" />
+
+        <TextView
+            android:id="@+id/msg_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gray_bubble4"
+            android:fontFamily="sans-serif"
+            android:paddingBottom="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="15dp"
+            android:singleLine="false"
+            android:textAlignment="center"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/text_size" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/initial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/msg_info"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/gray_chat"
         android:gravity="center"
         android:textColor="@color/white"
